force-app/main/default/objects/Sales__c/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <label>Bill Number</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>