force-app/main/default/objects/Sales__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>