force-app/main/default/objects/Sales__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>